# oop_course_spring_2023

./: .gitgnore  .gitignore  array_d  test.txt
trafnyak_s_l/: CMakeLists.txt  Doxyfile  build.sh
trafnyak_s_l/array_d/: build.sh
trafnyak_s_l/array_d/prj.lab/array_d/: CMakeLists.txt  array_d.cpp
trafnyak_s_l/array_d/prj.lab/array_d/include/array_d/: array_d.hpp
trafnyak_s_l/array_d/prj.lab/rational/: rational.cpp
trafnyak_s_l/array_d/prj.test/: array_d_test.cpp
trafnyak_s_l/old_libs/array_d/: CMakeLists.txt
trafnyak_s_l/old_libs/array_d/prj.lab/: CMakeLists.txt
trafnyak_s_l/old_libs/array_d/prj.lab/array_d/: array_d.cpp
trafnyak_s_l/old_libs/array_d/prj.test/: CMakeLists.txt  array_d_test.cpp
trafnyak_s_l/old_libs/rational/prj.lab/rational/include/rational/: rational.hpp
trafnyak_s_l/old_libs/rational/prj.test/: CMakeLists.txt
trafnyak_s_l/prj.cw/: CMakeLists.txt  Doxyfile  README.md  main.cpp
trafnyak_s_l/prj.cw/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  classgenerator-members.html  classgenerator.html  classgenerator.js  course__work_8hpp.html  course__work_8hpp.js  course__work_8hpp__dep__incl.map  course__work_8hpp__dep__incl.md5  course__work_8hpp__incl.map  course__work_8hpp__incl.md5  course__work_8hpp_source.html  dir_67a1ef42729cc10b4e506d0937c5be5e.html  dir_67a1ef42729cc10b4e506d0937c5be5e.js  dir_67a1ef42729cc10b4e506d0937c5be5e_dep.map  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_de1d559ee29b9529c3eb971659538ce1.html  dir_de1d559ee29b9529c3eb971659538ce1.js  dir_de1d559ee29b9529c3eb971659538ce1_dep.map  dir_f89abcb304c928c7d889aa5625570de5.html  dir_f89abcb304c928c7d889aa5625570de5_dep.map  dir_fecfe773f908b91c373e1f72e381ab2e.html  dir_fecfe773f908b91c373e1f72e381ab2e.js  dir_fecfe773f908b91c373e1f72e381ab2e_dep.map  doxygen.css  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  (+17 more)
trafnyak_s_l/prj.cw/html/search/: all_0.js  all_1.js  all_4.js  all_6.js  all_7.js  all_8.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js
trafnyak_s_l/prj.cw/lib/: CMakeLists.txt  course_work.hpp  lib.cpp
trafnyak_s_l/prj.cw/src/: config.json  config.txt  function.txt  start_of_code.txt
trafnyak_s_l/prj.lab/: CMakeLists.txt
trafnyak_s_l/prj.lab/array_d/: CMakeLists.txt  array_d.cpp
trafnyak_s_l/prj.lab/array_d/include/array_d/: array_d.hpp
trafnyak_s_l/prj.lab/array_t/: CMakeLists.txt
trafnyak_s_l/prj.lab/array_t/include/array_t/: array_t.hpp
trafnyak_s_l/prj.lab/array_t/src/: array_t.cpp
trafnyak_s_l/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
trafnyak_s_l/prj.lab/arrayd/include/arrayd/: arrayd.hpp
trafnyak_s_l/prj.lab/arrayd/src/: arrayd.cpp
trafnyak_s_l/prj.lab/arrayt/: CMakeLists.txt
trafnyak_s_l/prj.lab/arrayt/include/arrayt/: arrayt.hpp
trafnyak_s_l/prj.lab/arrayt/src/: arrayt.cpp
trafnyak_s_l/prj.lab/geo2d/: CMakeLists.txt  geo2d.cpp
trafnyak_s_l/prj.lab/geo2d/include/geo2d/: geo2d.hpp
trafnyak_s_l/prj.lab/matrixs/: CMakeLists.txt
trafnyak_s_l/prj.lab/matrixs/include/matrixs/: matrixs.hpp
trafnyak_s_l/prj.lab/matrixs/src/: matrixs.cpp
trafnyak_s_l/prj.lab/orto/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cpp  main.txt
trafnyak_s_l/prj.lab/rational/: CMakeLists.txt  rational.cpp
trafnyak_s_l/prj.lab/rational/include/rational/: rational.hpp
trafnyak_s_l/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  matrixs_test.cpp  rational_test.cpp
trafnyak_s_l/rational/: CMakeLists.txt  library  library.cpp  library.h
trafnyak_s_l/rational/prj.test/: rational_test.cpp
